# cmake-cpp-template

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md
cmake/: ConfigureBuild.cmake  PackageOptions.cmake  SetupCompiler.cmake  SetupOutputDirectories.cmake
cmake/Compiler/: clang.cmake  gcc.cmake  icc.cmake  msvc.cmake
include/dummy/: dummy.h
scripts/: clean.cmd  clean.sh  configure.cmd  configure.sh
source/: dummy.cpp
